pulumi/k8s/ghost-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost-service
spec:
  selector:
    app: ghost
  ports:
  - port: 80
    targetPort: 2368
  type: NodePort
