pulumi/k8s/ghost-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghost-ingress
spec:
  rules:
  - host: "ghost.local"
    http:
      paths:
      - path: "/"
        pathType: "Prefix"
        backend:
          service:
            name: ghost-service
            port:
              number: 80
